Put paxos code inside #ifdef PAXOS

--- a/mod/box/Makefile
+++ b/mod/box/Makefile
@@ -1,12 +1,14 @@
 src/octopus.o: CFLAGS += -DSTORAGE
 
 obj += src/admin.o
-obj += src/paxos.o
 obj += mod/box/box.o
 obj += mod/box/moonbox.o
 obj += mod/box/tuple_index.o
 obj += mod/box/memcached.o
 obj += third_party/qsort_arg.o
+
+obj += src/paxos.o
+src/log_io_recovery.o: CFLAGS += -DPAXOS
 
 src-lua += mod/box/src-lua/box.lua
 src-lua += mod/box/src-lua/box_prelude.lua
