Add missing DOT to Makefile.in

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,6 +17,7 @@ CPPFLAGS := @CPPFLAGS@
 LDFLAGS := @LDFLAGS@
 RAGEL := @RAGEL@
 RAGELFLAGS := @RAGELFLAGS@
+DOT := @DOT@
 CONFETTI := @CONFETTI@
 GIT := @GIT@
 HAVE_GIT := @HAVE_GIT@
