--- a/include/config.h.in
+++ b/include/config.h.in
@@ -144,6 +144,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Define to 1 if the C compiler supports __attribute__((cold)) */
+#undef HAVE__ATTRIBUTE_COLD
+
 /* Define to 1 if the system has the type `_Bool'. */
 #undef HAVE__BOOL
 
