implement libiproto and octobench (only ping for now)

--- a/Makefile.in
+++ b/Makefile.in
@@ -62,7 +62,7 @@ endif
 
 all: octopus
 
-subdirs += third_party $(foreach module,$(modules),mod/$(module)) cfg src src-lua
+subdirs += third_party $(foreach module,$(modules),mod/$(module)) cfg src src-lua client/libiproto client/octobench
 include $(foreach dir,$(subdirs),$(srcdir)/$(dir)/Makefile)
 
 ifneq ($(findstring src/paxos.o,$(obj)),)
@@ -85,7 +85,7 @@ third_party/luajit/src/libluajit.a:
 $(obj): $(foreach dir,$(subdirs),$(srcdir)/$(dir)/Makefile)
 $(obj): Makefile
 
-dep = $(patsubst %.o,%.d,$(obj))
+dep = $(patsubst %.o,%.d,$(obj) $(libobj) $(benchobj))
 -include $(dep)
 
 $(filter-out $(disable-warns-obj),$(obj)): CFLAGS += $(CFLAGS_WARNS)
