--- a/client/libiproto/Makefile
+++ b/client/libiproto/Makefile
@@ -1,19 +1,15 @@
 CLDIR=client/libiproto
 libobj += $(CLDIR)/iproto.o
 
-AR=ar
-RANLIB=ranlib
-
-ARFLAGS=rcv
-
-$(CLDIR)/libiproto.a: $(libobj)
-	$(AR) $(ARFLAGS) $@ $<
-	$(RANLIB) $@
-
 all: $(CLDIR)/libiproto.a
+$(CLDIR)/libiproto.a: $(libobj)
+	$(E) "AR	$@"
+	$(Q)$(AR) $(ARFLAGS) $@ $<
+	$(E) "RANLIB	$@"
+	$(Q)$(RANLIB) $@
 
 clean: clean_lib
-
 clean_lib:
-	rm -f $(libobj)
-	rm -f $(CLDIR)/libiproto.a
+	$(E) "CLEAN	$(CLDIR)"
+	$(Q)rm -f $(libobj)
+	$(Q)rm -f $(CLDIR)/libiproto.a
