Permit dups in cfg_tmpl var

--- a/cfg/Makefile
+++ b/cfg/Makefile
@@ -24,7 +24,7 @@ ifeq (1, $(HAVE_CONFETTI))
     defered += $$(obj): cfg/octopus.h cfg/octopus.cfg
 
     cfg/octopus.cfg_tmpl: Makefile $(sub-Makefile)
-    cfg/octopus.cfg_tmpl: cfg/core.cfg_tmpl $(cfg_tmpl)
+    cfg/octopus.cfg_tmpl: cfg/core.cfg_tmpl $(sort $(cfg_tmpl))
 	@mkdir -p $(dir $@)
 	@echo '%{ ' > $@
 	@echo "#include <cfg/prscfg.h>" >> $@
