--- a/mod/feeder/Makefile
+++ b/mod/feeder/Makefile
@@ -2,6 +2,7 @@
 
 obj += mod/feeder/feeder.o
 cfg_tmpl += mod/feeder/feeder_cfg.cfg_tmpl
+cfg_tmpl += cfg/log_io.cfg_tmpl
 
 src-lua += mod/feeder/src-lua/feeder.lua
 
