Add missing qsort_arg.o

--- a/src/index/Makefile
+++ b/src/index/Makefile
@@ -4,3 +4,4 @@ obj += src/index/hash.o
 obj += src/index/tree.o
 obj += src/index/lua.o
 obj += src/index/ordering.o
+obj += third_party/qsort_arg.o
