--- a/Makefile.in
+++ b/Makefile.in
@@ -77,9 +77,9 @@ octopus: $(obj)
 	$E "CC	$@"
 	$Q$(CC) $(LDFLAGS) $^ $(LIBS) -o $@
 
-LDFLAGS += -Lthird_party/luajit/src -Wl,--export-dynamic
-LDFLAGS += -Wl,--wrap=malloc -Wl,--wrap=calloc -Wl,--wrap=realloc
-LIBS += -lluajit
+octopus: LDFLAGS += -Wl,--wrap=malloc -Wl,--wrap=calloc -Wl,--wrap=realloc
+octopus: LDFLAGS += -Lthird_party/luajit/src -Wl,--export-dynamic
+octopus: LIBS += -lluajit
 octopus: third_party/luajit/src/libluajit.a
 third_party/luajit/src/libluajit.a:
 	$(E) "MAKE	$@"
@@ -162,20 +162,21 @@ endif
 
 .PHONY: distclean clean
 clean:
-	@echo "CLEAN	octopus"
-	@rm -rf $(obj) $(patsubst %.o,%.gcno,$(obj))
-	@rm -rf $(dep) octopus lcov test/var
+	$(E) "CLEAN	octopus"
+	$(Q)rm -rf $(obj) $(patsubst %.o,%.gcno,$(obj))
+	$(Q)rm -rf $(dep) octopus lcov test/var
 
 luaclean:
-	@$(MAKE) -C third_party/luajit/src clean
+	$(E) "CLEAN	luajit"
+	$(Q)$(MAKE) -C third_party/luajit/src clean
 
 configure-byproducts += autom4te.cache config.log config.status
 configure-byproducts += include/config.h Makefile scripts/gen-lua-registry.sh
 
 distclean: clean luaclean
-	@rm -rf $(dist-clean)
-	@rm -rf $(configure-byproducts) configure install.sh
-	@rm -rf TAGS test/var test/*.rej
+	$(Q)rm -rf $(dist-clean)
+	$(Q)rm -rf $(configure-byproducts) configure install.sh
+	$(Q)rm -rf TAGS test/var test/*.rej
 
 .PHONY: TAGS
 TAGS:
