--- a/include/config.h.in
+++ b/include/config.h.in
@@ -156,6 +156,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Define to 1 if you have the <valgrind/valgrind.h> header file. */
+#undef HAVE_VALGRIND_VALGRIND_H
+
 /* Define to 1 if the C compiler supports __attribute__((cold)) */
 #undef HAVE__ATTRIBUTE_COLD
 
