--- a/src/Makefile
+++ b/src/Makefile
@@ -34,7 +34,7 @@ ifeq ($(binary_type),)
   $(error binary_type must be defined)
 endif
 
-src/palloc.o: CFLAGS += -DPALLOC_STAT_INFO -DHAVE_THIRD_PARTY_VALGRIND_H=1 -DHAVE_THIRD_PARTY_QUEUE_H=1
+src/palloc.o: CFLAGS += -DPALLOC_STAT_INFO -DHAVE_THIRD_PARTY_QUEUE_H=1
 disable-warns-obj += src/octopus_ev.o
 src/octopus_ev.o: CFLAGS += -U_FORTIFY_SOURCE
 ifeq (1,$(HAVE_CC_FLAG_W_NO_COMMENT))
