--- a/client/libiproto/Makefile
+++ b/client/libiproto/Makefile
@@ -1,5 +1,6 @@
 CLDIR=client/libiproto
 libobj += $(CLDIR)/iproto.o $(CLDIR)/errcode.o
+dep += $(call depend,$(libobj))
 
 all: $(CLDIR)/libiproto.a
 $(CLDIR)/libiproto.a: $(libobj) third_party/qsort_arg.o
