--- a/client/libiproto/Makefile
+++ b/client/libiproto/Makefile
@@ -2,7 +2,7 @@ CLDIR=client/libiproto
 libobj += $(CLDIR)/iproto.o $(CLDIR)/errcode.o
 dep += $(call depend,$(libobj))
 
-all: $(CLDIR)/libiproto.a
+libiproto_all: $(CLDIR)/libiproto.a
 $(CLDIR)/libiproto.a: $(libobj) third_party/qsort_arg.o
 	$(E) "AR	$@"
 	$(Q)$(AR) $(ARFLAGS) $@ $^
