--- a/src/Makefile
+++ b/src/Makefile
@@ -27,7 +27,7 @@ ifeq (1,$(HAVE_RAGEL))
 	dist += src/admin.m
 endif
 
-CFLAGS += -DOCTOPUS
+$(obj): CFLAGS += -DOCTOPUS
 
 src/octopus.o: octopus_version.h
 src/octopus.o: CFLAGS += -DPRIMARY_MOD='"$(firstword $(modules))"' -D$(binary_type)
