--- a/mod/box/Makefile
+++ b/mod/box/Makefile
@@ -7,8 +7,10 @@ obj += mod/box/tuple_index.o
 obj += mod/box/memcached.o
 obj += third_party/qsort_arg.o
 
-obj += src/paxos.o
-src/log_io_recovery.o: CFLAGS += -DPAXOS
+ifeq ($(PAXOS),1)
+  obj += src/paxos.o
+  src/log_io_recovery.o: CFLAGS += -DPAXOS
+endif
 
 src-lua += mod/box/src-lua/box.lua
 src-lua += mod/box/src-lua/box_prelude.lua
