--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ mod/box/memcached.m
 src/admin.m
 octopus_version.h
 src-lua/registry.m
+scripts/stringify
 
 # luajit
 third_party/luajit/src/buildvm
