Add work_dir to example config

--- a/doc/example.cfg
+++ b/doc/example.cfg
@@ -1,6 +1,9 @@
 primary_port = 33013
 admin_port = 33015
 
+# working directory
+# work_dir = "."
+
 # a 2.5GB of object storage
 slab_alloc_arena = 2.5
 
