make libiproto the same as in util repositpry

--- a/client/libiproto/Makefile
+++ b/client/libiproto/Makefile
@@ -2,6 +2,8 @@ CLDIR=client/libiproto
 libobj += $(CLDIR)/iproto.o $(CLDIR)/errcode.o
 dep += $(call depend,$(libobj))
 
+$(CLDIR)/iproto.o $(CLDIR)/errcode.o: CFLAGS += -DLIBIPROTO_OCTOPUS
+
 $(libobj): Makefile $(sub-Makefile)
 
 libiproto_all: $(CLDIR)/libiproto.a
