--- a/Makefile.in
+++ b/Makefile.in
@@ -194,8 +194,14 @@ TAGS:
 	ctags-exuberant --langmap=ObjectiveC:.m.h.rl -eR
 
 .PHONY: test
+define run_test
+$(foreach test,$(sort $(wildcard mod/*/test/test_*)),../$(test)
+)
+endef
 test:	octopus
-	test/run.rb
+	@mkdir -p test
+	@cd test
+	@$(run_test)
 
 ifeq (1,$(COVERAGE))
 clean: clean-coverage
