Fix out-of-source builds

--- a/Makefile.in
+++ b/Makefile.in
@@ -86,7 +86,7 @@ octopus: $(obj)
 	$E "CC	$@"
 	$Q$(CC) $(LDFLAGS) $^ $(LIBS) -o $@
 
-octopus: LDFLAGS += -Lthird_party/luajit/src
+octopus: LDFLAGS += -L$(VPATH)/third_party/luajit/src
 octopus: LIBS += -lluajit
 octopus: third_party/luajit/src/libluajit.a
 third_party/luajit/src/libluajit.a:
@@ -159,9 +159,9 @@ else
 ifeq (1,$(HAVE_GIT))
 octopus_version.h: FORCE
 	@echo -n 'const char octopus_version_string[] = "' > $@_
-	@$(GIT) describe --always HEAD | tr -d \\n >> $@_
+	@cd $(VPATH); $(GIT) describe --always HEAD | tr -d \\n >> $@_
 	@echo -n - >> $@_
-	@$(GIT) branch | grep  '\*' | cut -f2 -d' ' | sed 's/^master$$/experimental/' | tr -d \\n >> $@_
+	@cd $(VPATH); $(GIT) branch | grep  '\*' | cut -f2 -d' ' | sed 's/^master$$/experimental/' | tr -d \\n >> $@_
 	@echo '";' >> $@_
 	@diff -q $@ $@_ 2>/dev/null >/dev/null || (echo "GEN	$(notdir $@)"; cp $@_ $@)
 	@rm $@_
