Add per-module version string

--- a/Makefile.in
+++ b/Makefile.in
@@ -151,6 +151,13 @@ octopus_version.h: FORCE
 	@echo '";' >> $@_
 	@diff -q $@ $@_ 2>/dev/null >/dev/null || (echo "GEN	$(notdir $@)"; cp $@_ $@)
 	@rm $@_
+
+$(foreach mod,$(modules),mod/$(mod)/$(mod)_version.h):
+	@echo -n 'const char $(subst .h,,$(notdir $@))_string[] = "' > $@_
+	@cd $(VPATH)/$(dir $@); $(GIT) describe --always HEAD | tr -d \\n >> $(notdir $@_)
+	@echo '";' >> $@_
+	@diff -q $@ $@_ 2>/dev/null >/dev/null || (echo "GEN	$@"; cp $@_ $@)
+	@rm $@_
 endif
 
 scripts/stringify: scripts/stringify.c
