New Lua net-io: LuaJIT.ffi instead of Lua/C API

--- a/src-lua/Makefile
+++ b/src-lua/Makefile
@@ -1,6 +1,7 @@
 src-lua += src-lua/prelude.lua
 src-lua += src-lua/index.lua
 src-lua += src-lua/stat.lua
+src-lua += src-lua/net.lua
 
 obj += src-lua/registry.o
 
