--- a/configure.ac
+++ b/configure.ac
@@ -268,6 +268,8 @@ AC_ARG_ENABLE([modules],
               [octopus_modules=$enableval],
               [octopus_modules="box feeder"])
 AC_SUBST(modules, [$octopus_modules])
+
+AC_MSG_NOTICE([Fetching modules])
 ${srcdir}/scripts/fetch-modules.sh
 for module in $octopus_modules; do
     AS_IF([test -r ${srcdir}/mod/$module/Makefile], [], AC_MSG_ERROR([No such module: $module]))
